Switched from grunt to gulp task runner. Add preprocess, watcher and browsersync for debug

--- a/package.json
+++ b/package.json
@@ -1,10 +1,21 @@
 {
   "name": "assistant-compiler",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Compile source files to userscript form",
-  "main": "Gruntfile.js",
+  "main": "gulpfile.js",
   "dependencies": {
-    "grunt": "1.0.1",
-    "grunt-contrib-uglify": "2.0.0"
+
+  },
+  "devDependencies": {
+    "browser-sync": "^2.18.12",
+    "gulp": "^3.9.1",
+    "gulp-batch": "^1.0.5",
+    "gulp-clean": "^0.3.2",
+    "gulp-file": "^0.3.0",
+    "gulp-preprocess": "^2.0.0",
+    "gulp-uglify": "^3.0.0",
+    "gulp-util": "^3.0.8",
+    "gulp-watch": "^4.3.11",
+    "run-sequence": "^1.2.2"
   }
 }
