--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
     "browser-sync": "^2.18.12",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.3.2",
+    "gulp-clean-css": "^3.4.2",
     "gulp-download-stream": "0.0.13",
     "gulp-file": "^0.3.0",
     "gulp-hash-creator": "^0.2.0",
+    "gulp-inline-assets": "^0.1.1",
+    "gulp-less": "^3.3.0",
     "gulp-preprocess": "^2.0.0",
     "gulp-uglify": "^3.0.0",
     "gulp-util": "^3.0.8",
     "gulp-watch": "^4.3.11",
+    "less-plugin-autoprefix": "^1.5.1",
+    "less-plugin-inline-urls": "^1.2.0",
     "run-sequence": "^1.2.2"
   }
 }
