--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "gulp-hash-creator": "^0.2.0",
     "gulp-inline-assets": "^0.1.1",
     "gulp-less": "^3.3.0",
+    "gulp-minify": "^2.1.0",
     "gulp-preprocess": "^2.0.0",
-    "gulp-uglify": "^3.0.0",
     "gulp-util": "^3.0.8",
     "gulp-watch": "^4.3.11",
     "inline-resource-literal": "git+https://github.com/seanl-adg/InlineResourceLiteral.git",
