--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "beta": "gulp beta",
     "locales": "gulp locales",
     "watch": "gulp watch",
+    "embedded": "gulp embedded",
     "test": "mocha-phantomjs test/test.html",
     "test-embedded": "mocha-phantomjs test/embedded.html"
   },
