--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
     "dev": "NODE_ENV=dev gulp buildDev --require @babel/register --gulpfile tasks",
     "beta": "NODE_ENV=beta gulp buildBeta --require @babel/register --gulpfile tasks",
     "release": "NODE_ENV=release gulp buildRelease --require @babel/register --gulpfile tasks",
-    "download-locales": "gulp downloadLocales --require @babel/register --gulpfile tasks",
-    "upload-locales": "gulp uploadLocales --require @babel/register --gulpfile tasks",
     "watch": "gulp watch --require @babel/register --gulpfile tasks",
     "embedded": "gulp buildEmbedded --require @babel/register --gulpfile tasks",
     "test": "mocha-phantomjs test/test.html",
     "test-embedded": "mocha-phantomjs test/embedded.html",
     "test-to-gh-pages": "gulp testsToGhPages --require @babel/register --gulpfile tasks",
-    "clean" : "gulp clean --require @babel/register --gulpfile tasks"
+    "clean": "gulp clean --require @babel/register --gulpfile tasks",
+    "locales:download": "LOCALES=DOWNLOAD node locales.js",
+    "locales:upload": "LOCALES=UPLOAD node locales.js"
   },
   "babel": {
     "presets": [
@@ -27,8 +27,10 @@
   },
   "devDependencies": {
     "@babel/preset-env": "^7.4.4",
+    "axios": "^0.19.0",
     "browser-sync": "^2.18.12",
     "chai": "^4.0.2",
+    "form-data": "^2.5.0",
     "gulp": "^4.0.2",
     "gulp-clean": "^0.3.2",
     "gulp-clean-css": "^3.4.2",
