--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "@babel/register": "^7.4.4"
   },
   "scripts": {
-    "dev": "NODE_ENV=dev gulp buildDev --require @babel/register --gulpfile tasks",
-    "beta": "NODE_ENV=beta gulp buildBeta --require @babel/register --gulpfile tasks",
-    "release": "NODE_ENV=release gulp buildRelease --require @babel/register --gulpfile tasks",
+    "dev": "NODE_ENV=DEV ./node_modules/.bin/webpack",
+    "beta": "NODE_ENV=BETA ./node_modules/.bin/webpack",
+    "release": "NODE_ENV=RELEASE ./node_modules/.bin/webpack",
     "watch": "gulp watch --require @babel/register --gulpfile tasks",
     "embedded": "gulp buildEmbedded --require @babel/register --gulpfile tasks",
     "test": "mocha-phantomjs test/test.html",
@@ -26,11 +26,9 @@
     ]
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.4.4",
     "axios": "^0.19.0",
     "browser-sync": "^2.18.12",
     "chai": "^4.0.2",
-    "form-data": "^2.5.0",
     "gulp": "^4.0.2",
     "gulp-clean": "^0.3.2",
     "gulp-clean-css": "^3.4.2",
@@ -49,6 +47,27 @@
     "mocha": "^3.4.2",
     "mocha-phantomjs": "^4.1.0",
     "request": "^2.88.0",
-    "run-sequence": "^1.2.2"
+    "run-sequence": "^1.2.2",
+    "@babel/core": "^7.5.4",
+    "@babel/preset-env": "^7.5.4",
+    "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^3.0.0",
+    "concat": "^1.0.3",
+    "copy-webpack-plugin": "^5.0.3",
+    "cp-file": "^7.0.0",
+    "eslint": "^6.0.1",
+    "eslint-config-airbnb": "^17.1.1",
+    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.2",
+    "form-data": "^2.5.0",
+    "fs-extra": "^8.1.0",
+    "glob": "^7.1.4",
+    "html-webpack-plugin": "^3.2.0",
+    "node-qunit-puppeteer": "^1.0.13",
+    "qunit": "^2.9.2",
+    "replace-in-file": "^4.1.1",
+    "webpack": "^4.35.3",
+    "webpack-cli": "^3.3.5"
   }
 }
