--- a/package.json
+++ b/package.json
@@ -17,31 +17,12 @@
     "locales:upload": "LOCALES=UPLOAD node locales.js"
   },
   "devDependencies": {
-    "axios": "^0.19.0",
-    "browser-sync": "^2.18.12",
-    "chai": "^4.0.2",
-    "gulp": "^4.0.2",
-    "gulp-clean": "^0.3.2",
-    "gulp-clean-css": "^3.4.2",
-    "gulp-download-stream": "0.0.19",
-    "gulp-file": "^0.4.0",
-    "gulp-hash-creator": "^0.2.0",
-    "gulp-inline-assets": "^0.1.1",
-    "gulp-less": "^3.3.0",
-    "gulp-minify": "^3.1.0",
-    "gulp-preprocess": "^2.0.0",
-    "gulp-util": "^3.0.8",
-    "gulp-watch": "^4.3.11",
-    "inline-resource-literal": "git+https://github.com/AdguardTeam/InlineResourceLiteral.git",
-    "less-plugin-autoprefix": "^1.5.1",
-    "less-plugin-inline-urls": "^1.2.0",
-    "mocha": "^3.4.2",
-    "mocha-phantomjs": "^4.1.0",
-    "request": "^2.88.0",
-    "run-sequence": "^1.2.2",
     "@babel/core": "^7.5.4",
     "@babel/preset-env": "^7.5.4",
+    "axios": "^0.19.0",
     "babel-loader": "^8.0.6",
+    "browser-sync": "^2.18.12",
+    "chai": "^4.0.2",
     "clean-webpack-plugin": "^3.0.0",
     "concat": "^1.0.3",
     "copy-webpack-plugin": "^5.0.3",
@@ -54,10 +35,30 @@
     "form-data": "^2.5.0",
     "fs-extra": "^8.1.0",
     "glob": "^7.1.4",
+    "gulp": "^4.0.2",
+    "gulp-clean": "^0.3.2",
+    "gulp-clean-css": "^3.4.2",
+    "gulp-download-stream": "0.0.19",
+    "gulp-file": "^0.4.0",
+    "gulp-hash-creator": "^0.2.0",
+    "gulp-inline-assets": "^0.1.1",
+    "gulp-less": "^3.3.0",
+    "gulp-minify": "^3.1.0",
+    "gulp-preprocess": "^2.0.0",
+    "gulp-util": "^3.0.8",
+    "gulp-watch": "^4.3.11",
     "html-webpack-plugin": "^3.2.0",
+    "inline-resource-literal": "git+https://github.com/AdguardTeam/InlineResourceLiteral.git",
+    "less-plugin-autoprefix": "^1.5.1",
+    "less-plugin-inline-urls": "^1.2.0",
+    "mocha": "^3.4.2",
+    "mocha-phantomjs": "^4.1.0",
     "node-qunit-puppeteer": "^1.0.13",
     "qunit": "^2.9.2",
+    "raw-loader": "^3.1.0",
     "replace-in-file": "^4.1.1",
+    "request": "^2.88.0",
+    "run-sequence": "^1.2.2",
     "webpack": "^4.35.3",
     "webpack-cli": "^3.3.5"
   }
