--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,8 @@
     "rules": {
         "indent": [
             "error",
-            4
+            4,
+            { "SwitchCase": 1 }
         ],
         "import/no-extraneous-dependencies": 0,
     }
