--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-react": "^7.14.2",
     "form-data": "^2.5.0",
     "fs-extra": "^8.1.0",
+    "html-loader": "^0.5.5",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
     "mocha": "^3.4.2",
