Add qunit puppeteer

--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "dev": "NODE_ENV=DEV ./node_modules/.bin/webpack && ./node_modules/.bin/webpack --config webpack.embedded.config.js",
     "beta": "NODE_ENV=BETA ./node_modules/.bin/webpack && NODE_ENV=BETA ./node_modules/.bin/webpack --config webpack.embedded.config.js",
     "release": "NODE_ENV=RELEASE ./node_modules/.bin/webpack && NODE_ENV=RELEASE ./node_modules/.bin/webpack --config webpack.embedded.config.js",
-    "test": "mocha-phantomjs test/test.html",
-    "test-embedded": "mocha-phantomjs test/embedded.html",
+    "test:build": "./node_modules/.bin/webpack --config tests/webpack.test.config.js",
+    "test": "yarn test:build && node tests/puppeteer.js",
+    "test-embedded": "./node_modules/.bin/mocha-phantomjs test/embedded.html",
     "test-to-gh-pages": "gulp testsToGhPages --require @babel/register --gulpfile tasks",
     "locales:download": "LOCALES=DOWNLOAD node locales.js",
     "locales:upload": "LOCALES=UPLOAD node locales.js"
@@ -32,6 +33,7 @@
     "form-data": "^2.5.0",
     "fs-extra": "^8.1.0",
     "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
     "mocha": "^3.4.2",
