--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "NODE_ENV=DEV ./node_modules/.bin/webpack && ./node_modules/.bin/webpack --config webpack.embedded.config.js",
     "beta": "NODE_ENV=BETA ./node_modules/.bin/webpack && NODE_ENV=BETA ./node_modules/.bin/webpack --config webpack.embedded.config.js",
     "release": "NODE_ENV=RELEASE ./node_modules/.bin/webpack && NODE_ENV=RELEASE ./node_modules/.bin/webpack --config webpack.embedded.config.js",
+    "lint": "eslint ./src",
     "test:build": "./node_modules/.bin/webpack --config tests/webpack.test.config.js",
     "test": "yarn test:build && node tests/puppeteer.js",
     "locales:download": "LOCALES=DOWNLOAD node locales.js",
