--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "Compile source files to userscript form",
   "main": "dist/assistant.embedded.js",
   "scripts": {
-    "dev": "export NODE_ENV=DEV; webpack && yarn build:embed",
-    "beta": "export NODE_ENV=BETA; webpack && yarn build:embed",
-    "release": "export NODE_ENV=RELEASE; webpack && yarn build:embed",
+    "dev": "export NODE_ENV=DEV; webpack && yarn build:embedded",
+    "beta": "export NODE_ENV=BETA; webpack && yarn build:embedded",
+    "release": "export NODE_ENV=RELEASE; webpack && yarn build:embedded",
     "lint": "eslint ./src",
-    "build:embed": "webpack --config webpack.embedded.config.js",
+    "build:embedded": "webpack --config webpack.embedded.config.js",
     "test:build": "./node_modules/.bin/webpack --config tests/webpack.test.config.js",
     "test": "yarn test:build && node tests/puppeteer.js",
     "locales:download": "LOCALES=DOWNLOAD node locales.js",
