--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -19,26 +19,26 @@ jobs:
       - name: yarn release
         run: yarn release
 
-#  notify:
-#    needs:
-#      - build
-#
-#    if:
-#      ${{ always() &&
-#        (
-#          github.event_name == 'push' ||
-#          github.event.pull_request.head.repo.full_name == github.repository
-#        )
-#      }}
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Conclusion
-#        uses: technote-space/workflow-conclusion-action@v1
-#      - name: Send Slack notif
-#        uses: 8398a7/action-slack@v3
-#        with:
-#          status: ${{ env.WORKFLOW_CONCLUSION }}
-#          fields: repo, message, commit, author, job
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+  notify:
+    needs:
+      - build
+
+    if:
+      ${{ always() &&
+        (
+          github.event_name == 'push' ||
+          github.event.pull_request.head.repo.full_name == github.repository
+        )
+      }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Conclusion
+        uses: technote-space/workflow-conclusion-action@v1
+      - name: Send Slack notif
+        uses: 8398a7/action-slack@v3
+        with:
+          status: ${{ env.WORKFLOW_CONCLUSION }}
+          fields: repo, message, commit, author, job
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
