AG-6488 remove react checks from eslint

--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-    "name": "adguard-assistant",
+    "name": "@adguard/assistant",
     "version": "4.3.43",
     "description": "Compile source files to userscript form",
     "main": "dist/assistant.embedded.js",
+    "module": "dist/assistant.esm.js",
     "scripts": {
         "dev": "export CHANNEL_ENV=DEV; webpack && yarn build:embedded",
         "beta": "export CHANNEL_ENV=BETA; webpack && yarn build:embedded",
@@ -26,11 +27,9 @@
         "cp-file": "^9.0.0",
         "create-file-webpack": "^1.0.2",
         "css-loader": "^3.4.2",
-        "eslint": "^6.8.0",
-        "eslint-config-airbnb": "^18.1.0",
-        "eslint-plugin-import": "^2.20.2",
-        "eslint-plugin-jsx-a11y": "^6.2.3",
-        "eslint-plugin-react": "^7.19.0",
+        "eslint": "^7.2.0",
+        "eslint-config-airbnb-base": "14.2.1",
+        "eslint-plugin-import": "^2.22.1",
         "filemanager-webpack-plugin": "^2.0.5",
         "form-data": "^3.0.0",
         "fs-extra": "^9.0.0",
