AG-6488 prepare assistant for publishing on npm

--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,8 @@
             4,
             { "SwitchCase": 1 }
         ],
-        "import/no-extraneous-dependencies": 0
+        "import/no-extraneous-dependencies": 0,
+        "import/prefer-default-export": 0,
+        "arrow-body-style": 0
     }
 }
