--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,5 @@
 .idea/
-build
-compile
-beta
-dev
-node_modules
-less/node_modules
-less/skin
-beta.bat
-replace.py
-tests/dist
-
-.keys*
-
-src/styles/style.css
-src/styles/mobile-style.css
+/build/
+/node_modules/
+/tests/dist/
 .DS_Store
