--- a/bamboo-specs/deploy-release.yaml
+++ b/bamboo-specs/deploy-release.yaml
@@ -21,8 +21,8 @@ userscripts.adtidy.org:
         interpreter: SHELL
         scripts:
           - |-
-            #!/bin/bash
             set -x
+            set -e
             ls -la
 
             ./bamboo-deploy-publisher/deploy.sh adguard-assistant-release
