--- a/bamboo-specs/build-release.yaml
+++ b/bamboo-specs/build-release.yaml
@@ -37,7 +37,7 @@ Build:
             set -e
             ls -alt
 
-            yarn install ${system.YARN_ARGS}
+            yarn install ${bamboo.varsYarn}
             yarn release
     - inject-variables:
         file: build/release/build.txt
