remove node_modules for bamboo builds

--- a/bamboo-specs/build-beta.yaml
+++ b/bamboo-specs/build-beta.yaml
@@ -35,6 +35,7 @@ Build:
 
             yarn install ${bamboo.varsYarn}
             yarn beta
+            rm -rf node_modules
     - inject-variables:
         file: build/beta/build.txt
         scope: RESULT
