--- a/bamboo-specs/build-release.yaml
+++ b/bamboo-specs/build-release.yaml
@@ -39,6 +39,7 @@ Build:
 
             yarn install ${bamboo.varsYarn}
             yarn release
+            rm -rf node_modules
     - inject-variables:
         file: build/release/build.txt
         scope: RESULT
