AG-9440 add deploy to npm plan

--- a/bamboo-specs/deploy-release.yaml
+++ b/bamboo-specs/deploy-release.yaml
@@ -6,6 +6,7 @@ deployment:
 release-naming: ${bamboo.userscriptMeta.version}
 environments:
   - userscripts.adtidy.org
+  - npmjs
 userscripts.adtidy.org:
   triggers: []
   tasks:
@@ -28,6 +29,41 @@ userscripts.adtidy.org:
             ./bamboo-deploy-publisher/deploy.sh adguard-assistant-release
   final-tasks: []
   variables: {}
+  requirements:
+    - adg-docker: 'true'
+  notifications:
+    - events:
+        - deployment-started-and-finished
+      recipients:
+        - webhook:
+            name: Deploy webhook
+            url: http://prod.jirahub.service.eu.consul/v1/webhook/bamboo?channel=adguard-qa
+npmjs:
+  docker:
+    image: adguard/node-ssh:14.18--0
+    volumes:
+      ${system.YARN_DIR}: "${bamboo.cacheYarn}"
+  triggers: [ ]
+  tasks:
+    - checkout:
+        force-clean-build: 'true'
+    - script:
+        interpreter: SHELL
+        scripts:
+          - |-
+            set -e
+            set -x
+
+            yarn install ${bamboo.varsYarn}
+
+            ls -la
+
+            export NPM_TOKEN=${bamboo.npmSecretToken}
+            echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" > .npmrc
+            npm publish --access public
+
+            # cleanup
+            rm -rf node_modules
   requirements:
     - adg-docker: 'true'
   notifications:
