AG-9440 add permisions

--- a/bamboo-specs/permissions-release.yaml
+++ b/bamboo-specs/permissions-release.yaml
@@ -14,3 +14,9 @@ environment-permissions:
         permissions:
           - view
           - deploy
+  - npmjs:
+      - groups:
+          - extensions-developers
+        permissions:
+          - view
+          - deploy
