--- a/bamboo-specs/increment.yaml
+++ b/bamboo-specs/increment.yaml
@@ -36,6 +36,11 @@ Increment:
 
             # do not increment for dist deploy after release build
             if ! [[ `git log -1 --pretty=%s` =~ "deploy: update dist" ]];then
+              set -x
+              set -e
+              # Fix mixed logs
+              exec 2>&1
+
               git checkout master
               ls -alt
               yarn increment
