--- a/bamboo-specs/increment.yaml
+++ b/bamboo-specs/increment.yaml
@@ -5,7 +5,7 @@ plan:
   key: LEGASSINCRSPECS
   name: legacy assistant - increment version
 variables:
-  dockerNode: node:15.14.0-buster-slim
+  dockerNode: adguard/node-ssh:15.14--6
 
 stages:
   - Increment:
