--- a/.eslintrc
+++ b/.eslintrc
@@ -2,8 +2,7 @@
     "extends": "airbnb-base",
     "env": {
         "browser": true,
-        "node": true,
-        "mocha": true
+        "node": true
     },
     "rules": {
         "indent": [
