AG-22653 expose library via self
Merge in EXTENSIONS/assistant from fix/AG-22653 to master

Squashed commit of the following:

commit 4f0ee4e40745720c465eb2c91d97eafc63ed69df
Author: Maxim Topciu <mtopciu@adguard.com>
Date:   Wed May 31 16:05:23 2023 +0300

    AG-22653 revert version

commit 90842d25e10afd09575970d8bcb7a4a53bb3672d
Author: Maxim Topciu <mtopciu@adguard.com>
Date:   Wed May 31 16:00:55 2023 +0300

    AG-22653 expose library via self

--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
     "main": "dist/assistant.js",
     "types": "dist/assistant.d.ts",
     "scripts": {
-        "dev": "export CHANNEL_ENV=DEV; yarn build && yarn build:embedded",
-        "beta": "export CHANNEL_ENV=BETA; yarn build && yarn build:embedded",
-        "release": "export CHANNEL_ENV=RELEASE; yarn build && yarn build:embedded",
+        "dev": "export CHANNEL_ENV=DEV; yarn build && yarn build:embedded && yarn build:self",
+        "beta": "export CHANNEL_ENV=BETA; yarn build && yarn build:embedded && yarn build:self",
+        "release": "export CHANNEL_ENV=RELEASE; yarn build && yarn build:embedded && yarn build:self",
         "lint": "eslint ./src ./tests",
         "build": "webpack --config scripts/build/webpack.user.config.js",
-        "build:embedded": "webpack --config scripts/build/webpack.embedded.config.js",
+        "build:embedded": "webpack --config scripts/build/webpack.umd.config.js",
+        "build:self": "webpack --config scripts/build/webpack.self.config.js",
         "test": "yarn webpack --config tests/webpack.test.config.js && node tests/puppeteer.js",
         "locales:download": "LOCALES=DOWNLOAD node scripts/locales/locales.js",
         "locales:upload": "LOCALES=UPLOAD node scripts/locales/locales.js",
