add changelog and gh auto release workflow, update node version in specs. AG-28104
Squashed commit of the following:

commit 8841aae898d72cf010719d3e7192f15c1387cd92
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Tue Nov 28 18:22:17 2023 +0200

    add gh auto release workflow

commit f66180280dd09b513bb389a47ec2a6502146ca7f
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Tue Nov 28 18:18:19 2023 +0200

    update node version in specs

commit aa98371a30e12435eb80561a249a9dc139f0af03
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Tue Nov 28 18:18:05 2023 +0200

    update caniuse-lite

commit 03215c82f8cdfa59331be0fc04e0dab76f518191
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Tue Nov 28 17:58:30 2023 +0200

    add changelog

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,17 +1,20 @@
 name: Build Adguard Assistant
 
+env:
+  NODE_VERSION: 18
+
 on: push
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Use Node.jobs
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
-          node-version: 14.x
+          node-version: ${{ env.NODE_VERSION }}
 
       - name: yarn install
         run: yarn install
@@ -33,7 +36,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Conclusion
-        uses: technote-space/workflow-conclusion-action@v1
+        uses: technote-space/workflow-conclusion-action@v3
       - name: Send Slack notif
         uses: 8398a7/action-slack@v3
         with:
