AG-30908 clean node_modules in the final tasks
Merge in EXTENSIONS/assistant from fix/AG-30908 to master

Squashed commit of the following:

commit 36c03602cd7afcf265538d441ad0bfcc30f1e8be
Author: Maxim Topciu <mtopciu@adguard.com>
Date:   Wed Mar 6 12:05:17 2024 +0200

    AG-30908 clean node_modules in the final tasks

--- a/bamboo-specs/build-beta.yaml
+++ b/bamboo-specs/build-beta.yaml
@@ -35,7 +35,6 @@ Build:
 
             yarn install ${bamboo.varsYarn}
             yarn beta
-            rm -rf node_modules
     - inject-variables:
         file: build/beta/build.txt
         scope: RESULT
@@ -45,6 +44,22 @@ Build:
         configuration:
           selectedRepository: defaultRepository
           tagName: v${bamboo.userscriptMeta.version}-beta
+  final-tasks:
+    - script:
+        interpreter: SHELL
+        scripts:
+          - |-
+            set -x
+            set -e
+
+            # Fix mixed logs
+            exec 2>&1
+
+            ls -la
+
+            echo "Size before cleanup:" && du -h | tail -n 1
+            rm -rf node_modules
+            echo "Size after cleanup:" && du -h | tail -n 1
   artifacts:
     - name: assistant.meta.js
       location: build/beta
