--- a/bamboo-specs/tests.yaml
+++ b/bamboo-specs/tests.yaml
@@ -37,7 +37,22 @@ Test:
             yarn install ${bamboo.varsYarn}
             yarn dev
             yarn test
+  final-tasks:
+    - script:
+        interpreter: SHELL
+        scripts:
+          - |-
+            set -x
+            set -e
+
+            # Fix mixed logs
+            exec 2>&1
+
+            ls -la
+
+            echo "Size before cleanup:" && du -h | tail -n 1
             rm -rf node_modules
+            echo "Size after cleanup:" && du -h | tail -n 1
   artifacts:
     - name: assistant.meta.js
       location: build/dev
