--- a/bamboo-specs/build-release.yaml
+++ b/bamboo-specs/build-release.yaml
@@ -39,7 +39,6 @@ Build:
 
             yarn install ${bamboo.varsYarn}
             yarn release
-            rm -rf node_modules
     - inject-variables:
         file: build/release/build.txt
         scope: RESULT
@@ -55,6 +54,22 @@ Build:
         configuration:
           selectedRepository: defaultRepository
           tagName: v${bamboo.userscriptMeta.version}
+  final-tasks:
+    - script:
+        interpreter: SHELL
+        scripts:
+          - |-
+            set -x
+            set -e
+
+            # Fix mixed logs
+            exec 2>&1
+
+            ls -la
+
+            echo "Size before cleanup:" && du -h | tail -n 1
+            rm -rf node_modules
+            echo "Size after cleanup:" && du -h | tail -n 1
   artifacts:
     - name: assistant.meta.js
       location: build/release
