AG-32643 change notifications channel
Merge in EXTENSIONS/assistant from enhance/AG-32643 to master

Squashed commit of the following:

commit 93b07a5865766dda5815881f4a2165ace11352f0
Author: stanislav-atr <s.atroschenko@adguard.com>
Date:   Mon May 13 18:08:28 2024 +0300

    remove booleans quotes

commit b13f785a5d544ddfc21789a8d6de60239beaa27a
Author: stanislav-atr <s.atroschenko@adguard.com>
Date:   Mon May 13 18:04:01 2024 +0300

    AG-32643 change notifications channel

--- a/bamboo-specs/deploy-beta.yaml
+++ b/bamboo-specs/deploy-beta.yaml
@@ -13,7 +13,7 @@ userscripts.adtidy.org:
     - checkout:
         repository: bamboo-deploy-publisher
         path: bamboo-deploy-publisher
-        force-clean-build: 'false'
+        force-clean-build: false
     - artifact-download:
         artifacts:
           - {}
@@ -29,11 +29,11 @@ userscripts.adtidy.org:
   final-tasks: []
   variables: {}
   requirements:
-    - adg-docker: 'true'
+    - adg-docker: true
   notifications:
     - events:
         - deployment-started-and-finished
       recipients:
         - webhook:
             name: Deploy webhook
-            url: http://prod.jirahub.service.eu.consul/v1/webhook/bamboo?channel=adguard-qa
+            url: http://prod.jirahub.service.eu.consul/v1/webhook/bamboo?channel=adguard-qa-extensions-builds
